errors in contract rename
